--- a/dev/index.html
+++ b/dev/index.html
@@ -14,7 +14,7 @@
   </script>
   <![endif]-->
   <meta name="description" content="">
-  <title></title>
+  <title>Portfolio</title>
 </head>
 <body class="background-index">
   <div class="opacity-home">
